eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-gateway-balance-calculator-service-lmax
  labels:
    app: payment-gateway-balance-calculator-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-gateway-balance-calculator-service
  template:
    metadata:
      labels:
        app: payment-gateway-balance-calculator-service
    spec:
      containers:
        - name: payment-gateway-balance-calculator-service
          image: 387867911189.dkr.ecr.ap-southeast-1.amazonaws.com/payment-gateway-balance:latest
          ports:
            - containerPort: 8080
