eks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment-balance-calculator-api-service
spec:
  selector:
    app:  payment-gateway-balance-calculator-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
